--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Data Horizon System"
 subtitle: "M.T.M. Buddy System Motivation"
 author: M.T.Muhammed
-theme: yeti
+theme: flatly
 ---
 
 ```{r setup, include=FALSE}
