--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Data Horizon System"
 subtitle: "M.T.M. Buddy System Motivation"
-author: M.T.Muhammed
-theme: flatly
+author: Muhammed Tahir Muhammed
+theme: darkly
 ---
 
 ```{r setup, include=FALSE}
