--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ if(!require(pacman)) install.packages("pacman")
 Loading the necessary packages using package manager (pacman)
 
 ```{r}
-pacman::p_load(tidyverse, plotly, dslabs, esquisse)
+pacman::p_load(tidyverse, plotly, dslabs, esquisse, reactable)
 ```
 
 :::{.panel-tabset}
@@ -26,7 +26,7 @@ pacman::p_load(tidyverse, plotly, dslabs, esquisse)
 loading the general social survey dataset
 
 ```{r}
-gss_cat
+reactable(gss_cat)
 ```
 
 ## Section two
